# CvUtilities

./: .dockerignore  .editorconfig  .gitignore  .releaserc.yaml  AlliedVision.Dockerfile  CHANGELOG.md  CODEOWNERS  CvBuilder.slnx  Dispense.amd.Dockerfile  Dispense.arm.Dockerfile  Dispense.original.amd.Dockerfile  Dispense.original.arm.Dockerfile  Dockerfile  Dockerfile.runner  Makefile  README.md  TCS.Dockerfile  docker-compose-ci.yml  docker-compose.arm-dev.yml  docker-compose.dab.yml  docker-compose.tcs.yml  docker-compose.yml  orbbec-setup.md  package-lock.json  package.json  rtDispense.bat  sample.env
Fulfil.AlliedVision/: .gitignore  CMakeLists.txt  Makefile  README.md
Fulfil.AlliedVision/assets/ground-truths/: plm.json
Fulfil.AlliedVision/assets/test-outputs/: plm-2025-01-17.json  plm.json
Fulfil.AlliedVision/include/: vmb-camera.h  vmb-manager.h
Fulfil.AlliedVision/include/aruco/: aruco_utils.h
Fulfil.AlliedVision/scripts/: inspect_request.py  repack_download_dataset.py  repack_inspect_request.py
Fulfil.AlliedVision/scripts/coco/: _coco_client.py  _coco_template.json  cvat_client.py  repack_generate_coco.py  repack_summarize.py
Fulfil.AlliedVision/src/: bag_release.cpp  vmb-camera.cpp  vmb-manager.cpp
Fulfil.AlliedVision/src/aruco/: aruco_utils.cpp
Fulfil.AlliedVision/src/entrypoints/: bag_release.cpp  repack_perception_test.cpp
Fulfil.CPPUtils/: .gitignore  CMakeLists.txt  CMakeLists.txt.in  README.md  aarch64-linux-gnu-toolchain.cmake  common.cmake
Fulfil.CPPUtils/app/: CMakeLists.txt  create_socket.cpp  grpc_test.cpp  simple_client.cpp
Fulfil.CPPUtils/include/Fulfil.CPPUtils/: build.h.template  conversions.h  curl_control.h  depth_pixel.h  eigen.h  file_system_util.h  httplib.h  logging.h  networking.h  pixel.h  point_3d.h  processing_queue.h  stats_helper.h  stats_helper_delegates.h  timer.h
Fulfil.CPPUtils/src/: CMakeLists.txt  conversions.cpp  curl_control.cpp  depth_pixel.cpp  file_system_util.cpp  logging.cpp  pixel.cpp  point_3d.cpp  timer.cpp
Fulfil.CPPUtils/src/aruco/: aruco_utils.cpp
Fulfil.CPPUtils/src/comm/: GrpcService.cc  depthCams.grpc.pb.cc  depthCams.grpc.pb.h  depthCams.pb.cc  depthCams.pb.h  depthCams.proto
Fulfil.CPPUtils/src/eigen/: IniEigenMatrixLoader.cpp  custom_matrix3d_predicate.cpp  matrix3xd_builder.cpp  matrix3xd_filter.cpp
Fulfil.CPPUtils/src/networking/: socket_information.cpp  socket_manager.cpp
Fulfil.CPPUtils/src/orbbec/: orbbec_camera.cpp  orbbec_manager.cpp
Fulfil.CPPUtils/test/: CMakeLists.txt  test_custom_matrix3d_predicate.cpp  test_file_system_helper.cpp  test_matrix3xd_filter.cpp  test_point_3d.cpp  test_socket_header_serialization.cpp
Fulfil.CPPUtils/test/processing_queue/: processing_queue_tests.cpp
Fulfil.DepthCam/: .gitignore  CMakeLists.txt  CMakeLists.txt.in  README.md
Fulfil.DepthCam/app/: CMakeLists.txt  main.cpp  marker_displayer.cpp  mock_generator.cpp
Fulfil.DepthCam/include/Fulfil.DepthCam/: aruco.h  core.h  data.h  mocks.h  point_cloud.h  visualization.h
Fulfil.DepthCam/src/: CMakeLists.txt
Fulfil.DepthCam/src/aruco/: container_matrix3xd_predicate.cpp  container_matrix3xd_predicate.h  fixed_transform_container.cpp  kabsch_helper.cpp  marker.cpp  marker_detector.cpp  marker_detector_container.cpp
Fulfil.DepthCam/src/coders/: affine3d_coder.cpp  extrinsics_coder.cpp  intrinsics_coder.cpp  intrinsics_coder.h  matrix3xd_coder.cpp  point_cloud_decoder.cpp
Fulfil.DepthCam/src/core/: depth_sensor.cpp  depth_sensor.h  depth_session.cpp  device_manager.cpp  sigterm.cpp  transform_depth_session.cpp
Fulfil.DepthCam/src/data/: FTP_generator.cpp  basic_depth_mask_method.cpp  bigquery_upload.cpp  (+6 more)
Fulfil.DepthCam/test/: CMakeLists.txt  intrinsics  point_cloud  test_affine3d_coder.cpp  test_extrinsics_encoder.cpp  test_intrinsics_coder.cpp  test_main.cpp  test_matrix3xd_coder.cpp  test_no_translation_point_cloud.cpp  test_translation_point_cloud.cpp
Fulfil.Dispense/: .gitignore  AGX_specific_main.ini  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.in  Makefile  README.md  common.cmake  deploy.sh  massxdeploy.sh  xdeploy.sh
Fulfil.Dispense/app/: CMakeLists.txt  auto_tray_calibration.cpp  camera_live_feed.cpp  clear_dispense_client_mongo.cpp  dispense_test_client.cpp  eval.cpp  live_viewer.cpp  main.cpp  move_motor.cpp  offline_test.cpp  online_test.cpp  pulse_runner.cpp  test.cpp  test_auto_tray_calibration.cpp  tray_calibration.cpp  tray_offline_test.cpp  upload_file.cpp
Fulfil.Dispense/configs/: LFB2_config.ini  LFB3_config.ini  main_config.ini  tray_config.ini
Fulfil.Dispense/docs/: AGX_specific_main.ini  bg_redis_worker.service  depthcam_4-1.service  pull_request_template.md  tray_count.service
Fulfil.Dispense/metrics/: FED-output-labels.xml
Fulfil.Dispense/scripts/: 1_download_dispenses.sh  2_split_dispense_sets.sh  README.md  _2_split_dispense_sets.py  _download_dispenses.py  bg_redis_worker.service  bg_redis_worker_3_1.service  dab-pull-latest.sh  dab-push-latest.sh  dab-update-facility.sh  depthcam-service-startup.sh  depthcam.service  download_dispenses.sh  mongo_to_ini.py  mount_sd.sh  requirements.txt  stopdc  tray_count.service  tray_count_3_1.service
Fulfil.Dispense/src/: CMakeLists.txt
Fulfil.Dispense/test/: CMakeLists.txt  fixtures.cpp  fixtures.h  realsense_image_file_manager_tests.cpp  test_loop.sh  tray_calibration_filename_test.cpp
Fulfil.MongoCpp/: .gitignore  CMakeLists.txt  CMakeLists.txt.in  README.md  install_mongo.sh
Fulfil.MongoCpp/app/: CMakeLists.txt  main.cpp
Fulfil.MongoCpp/scripts/: start_mock_factory_db.sh
Fulfil.MongoCpp/src/: CMakeLists.txt  base_mongo_connection.cpp  mongo_connection.cpp
Fulfil.OrbbecUtils/src/: CMakeLists.txt
Fulfil.TCS/: CMakeLists.txt  Makefile  README.md  eval.cpp  orbbec.cpp  pbl.cpp  tcs.cpp
Fulfil.TCS/include/: vmb-camera.h  vmb-manager.h
Fulfil.TCS/scripts/: 3_eval_bag_clips.sh  4_summarize_bag_clips.sh  _3_eval_bag_clips.py  _4_summarize_bag_clips.py  tcs_perception_scripts.cpp
Fulfil.TCS/src/: vmb-camera.cpp  vmb-manager.cpp
Fulfil.TCS/test/: int_tests.cpp  tests.cpp  unit_tests.cpp
(+597 files in other folders)
